--- a/weather/package.json
+++ b/weather/package.json
@@ -28,9 +28,9 @@
     "forecast"
   ],
   "dependencies": {
-    "chalk": "~1.1.1",
+    "chalk": "^1.1.3",
     "lodash": "~4.17.0",
-    "meow": "~3.7.0",
+    "meow": "^3.7.0",
     "request": "~2.79.0",
     "update-notifier": "2.1.0",
     "yql": "~1.0.2"
